@@ -20,6 +20,10 @@ Working version
 
 ### Runtime system:
 
+- #11919: New runtime events counters for major heap stats and minor heap
+  resizing.
+  (Sadiq Jaffer, review by Gabriel Scherer and David Allsopp)
+
 - #11287, #11872, #11955: Clean up reserved header bits (once used for
   Spacetime profiling).
   (Nick Barnes, review by Gabriel Scherer and Damien Doligez)
